# FileTransferApp

./: .gitignore  CMakeLists.txt  readme.md
src/: main.cpp
src/core/: discovery_service.cpp  discovery_service.hpp  file_handler.cpp  file_handler.hpp  transfer_manager.cpp  transfer_manager.hpp
src/network/: protocol.cpp  protocol.hpp  socket_handler.cpp  socket_handler.hpp
src/platform/: platform.hpp
src/platform/linux/: platform_impl.cpp
src/platform/windows/: platform_impl.cpp
src/ui/desktop/: CMakeLists.txt  main_desktop.cpp  resources.qrc  ui_manager.cpp  ui_manager.hpp  windows_main.cpp
src/utils/: encryption.cpp  encryption.hpp  logging.cpp  logging.hpp
